--- a/my_syt/sport_adaptation.css
+++ b/my_syt/sport_adaptation.css
@@ -182,7 +182,7 @@ height:95px;;
 }
 
 /*маленький девайс*/
-@media only screen and (max-width:600px){
+@media only screen and (max-width:550px){
      .wrapper{
         width: 480px;
     }
@@ -237,12 +237,13 @@ height:74px;;
         left: 69%;
     }
     .conteiner2{
-      width: 100%; 
-        height: 900px;
+      width:480px; 
+        height: 850px;
         top: 330px;
+        margin-bottom: 20px;
     }
     .nazw2_3{
-      top: 530px;  
+      top: 430px;  
     }
     .nazw2_4{
        top: 470px; 
@@ -256,23 +257,192 @@ height:74px;;
     .conteiner3{
         top: 1280px;
         width: 480px;
-     
+        top: 1180px;
+    }
+}
+/*совсем маленький девайс*/
+@media only screen and (max-width:410px){
+     .wrapper{
+        width: 375px;
+    }
+    .conteiner1{
+        width: 375px;
+    }
+     .nazw1_1{
+        font-size: 12px;
+         left: 80px;
+    }
+    .logo1{
+        left: 5px;
+    }
+    
+    .nazw1_2{
+        font-size: 20px;
+        left: 80px;
+        top: 70px;
+    }
+    .butt1{
+        font-size: 15px;
+        line-height: 15px;
+    }
+    .butt2{
+        font-size: 14px;
+        line-height: 15px;
+        left: 10px;
+    }
+    .butt3{
+        font-size: 14px;
+        line-height: 10px;
+    
+    }
+    .butt4{
+        font-size: 14px;
+        line-height: 15px;
+        left: 10px;
+    }
+    .butt5{
+        font-size: 14px;
+        line-height: 10px;
+    }
+    .dws2{
+        left: 69%;
+    }
+    .dws4{
+        left: 69%;
+    }
+    .conteiner2{
+      width:375px; 
+        height: 800px;
+        top: 330px;
+        margin-bottom: 20px;
+       
+    }
+    .nazw2_1{
+        font-size: 22px;
+    }
+    .nazw2_2{
+        font-size: 15px;
+       
+    }
+    .nazw2_3{
+        font-size: 22px;
+      top: 410px;  
+    }
+    .nazw2_4{
+       top: 450px; 
+        font-size: 15px;
+    }
+    .nazw2_5{
+        font-size: 22px;
+        top: 610px;
+    }
+    .nazw2_6{
+       top: 650px;
+        font-size: 15px;
+    }
+    .conteiner3{
+        top: 1280px;
+        width: 375px;
+        top: 1120px;
     }
 }
 
 
-/*маленький девайс*/
-@media only screen and (max-width:370px){
+
+/*прям совсем маленький девайс*/
+@media only screen and (max-width:350px){
      .wrapper{
         width: 320px;
     }
     .conteiner1{
         width: 320px;
-          display: flex;
+    }
+    .logo1{
+     display: flex;
+    width:45px;
+height:47px;;
+    background: url("logo_320.jpg")left no-repeat;
+   border-radius: 50%;
+    position: absolute;
+    left: 5px;
+    top: 10px;
+}
+     .nazw1_1{
+        font-size: 11px;
+         left: 50px;
+    }
+    .nazw1_2{
+        font-size: 20px;
+        left: 50px;
+        top: 70px;
+    }
+    .butt1{
+        font-size: 15px;
+        line-height: 15px;
+    }
+    .butt2{
+        font-size: 12px;
+        line-height: 15px;
+        left:10px;
+    }
+    .butt3{
+        font-size: 12;
+        line-height: 10px;
+    
+    }
+    .butt4{
+        font-size: 12px;
+        line-height: 15px;
+        left: 10px;
+    }
+    .butt5{
+        font-size: 12px;
+        line-height: 10px;
+    }
+    .dws2{
+        left: 69%;
+    }
+    .dws4{
+        left: 69%;
     }
     .conteiner2{
-      width: 320px; 
+      width:320px; 
+        height: 850px;
+        top: 330px;
+        margin-bottom: 20px;
+       
+    }
+    .nazw2_1{
+        font-size: 18px;
     }
     .nazw2_2{
-        font-size:25px;
+        font-size: 15px;
+        left: -10px;
+       
+    }
+    .nazw2_3{
+      top: 450px;
+    font-size: 18px;
+    }
+    .nazw2_4{
+       top: 480px; 
+        font-size: 15px;
+        left: -10px;
+    }
+    .nazw2_5{
+        top: 660px;
+        font-size: 18px;
+    }
+    .nazw2_6{
+       top: 700px; 
+         font-size: 15px;
+        left: -10px;
+    }
+    .conteiner3{
+        width: 320px;
+        top: 1180px; 
+    }
+    .nazw3_1{
+        font-size: 25px;
+    }
 }
