--- a/my_syt/sport.css
+++ b/my_syt/sport.css
@@ -327,7 +327,7 @@ height:158px;;
     max-width: 1300px;
     min-width: 200px;
     height: 600px;
-    background-color:aqua ;
+    background-color: ;
     position: absolute;
     top: 870px;
 }
