--- a/my_syt/sport.css
+++ b/my_syt/sport.css
@@ -12,6 +12,8 @@ body{
     min-width: 200px;
     height: 843px;
      background: url("../my_syt/sport/1.jpg")left no-repeat;
+    background-position: center;
+        background-size: cover;
    
     
 }
