--- a/my_syt/sport.css
+++ b/my_syt/sport.css
@@ -330,6 +330,8 @@ height:158px;;
     background-color: ;
     position: absolute;
     top: 870px;
+     background-position: center;
+        background-size: cover;
 }
 
 .nazw2_1{
