--- a/my_syt/sport_adaptation.css
+++ b/my_syt/sport_adaptation.css
@@ -6,6 +6,9 @@
     .conteiner1{
         width: 1280px;
     }
+    .butt1{
+        top: 70px;
+    }
     .conteiner2{
         width: 1280px;
     }
