--- a/my_syt - копия/sport_adaptation.css
+++ b/my_syt - копия/sport_adaptation.css
@@ -38,4 +38,26 @@
         left: 70%;
         top: 95%;
 }
+    .conteiner2{
+        width: 100%;
+        background-color: aqua;
+    }
+    .nazw2_2{
+        top: 5%;
+    }
+     .nazw2_3{
+        top: 45%;
+    }
+    .nazw2_4{
+        top: 50%;
+    }
+     .nazw2_5{
+        top: 70%;
+    }
+    .nazw2_6{
+        top: 78%;
+    }
+    .conteiner3{
+        width: 100%;
+    }
 }
