--- a/adaptation/sport_adaptation2.css
+++ b/adaptation/sport_adaptation2.css
@@ -1,89 +1,89 @@
-/*средний девайс*/
-@media only screen and (max-width:750px){
+
+/*min mig devices*/
+@media only screen and (max-width:1080px){
      .wrapper{
-        width: 640px;
+        width: 960px;
     }
     .conteiner1{
-        width: 640px;
-          display: flex;
-    height: 415px;
-     background: url("../my_syt/sport/1_640.jpg")left no-repeat;
+        width: 960px;
+        display: flex;
+    height: 623px;
+     background: url("../my_syt/sport/1_960.jpg")left no-repeat;
     position: absolute;
     top: 0px;
     right: 0px;
     }
-     .nazw1_1{
+    .logo1{
+         display: flex;
+    width:90px;
+height:95px;;
+    background: url("logo_640.jpg")left no-repeat;
+   border-radius: 50%;
+    }
+    .nazw1_1{
         position: absolute;
-        left: 120px;
+        left: 250px;
     }
     .nazw1_2{
         position: absolute;
-        left: 180px;
-        font-size: 25px;
-    }
-     .dws{
-         position: absolute;
-  
-    left: 45%;
-    }
-    .butt1{
-        font-size: 18px;
-        line-height: 20px;
+        left: 200px;
     }
     .dws{
-       top: 40%; 
+         position: absolute;
+    top: 55%;
+    left: 42%;
     }
-    .butt2{
-        font-size: 18px;
-        line-height: 20px;
+    .dws1{
+        position: absolute;
+        top: 75%;
     }
     .dws2{
-        
-    }
-    .butt3{
-        font-size: 18px;
-        line-height: 20px;
+        position: absolute;
+        top: 75%;
+        left: 70%;
     }
     .dws3{
-        
+        position: absolute;
+        left: 10%; 
+        top: 90%;
+    }
+    .dws4{
+        position: absolute;
+        left: 70%;
+        top: 90%;
     }
     .butt4{
-      font-size: 18px;
-        line-height: 20px;  
-        padding-left: 16px;
-        padding-right: 16px;
+    padding-left: 12px;
+    padding-right: 30px;
     }
     .butt5{
-        font-size: 18px;
-        line-height: 20px;
-        padding-left: 18px;
-        padding-right: 16px;
+        padding-left: 12px;
+    padding-right: 30px;
     }
     .conteiner2{
-        width: 640px;
-        height:  750px;
+        width: 960px;
+        height: 650px;
         position: absolute;
-        top:430px;
+        top:650px;
     }
     .nazw2_3{
         position: absolute;
-        top: 380px;
+        top: 260px;
     }
     .nazw2_4{
-        position: absolute;
-        top: 420px;
+      top: 300px;
     }
-     .nazw2_5{
-        position: absolute;
-        top: 550px;
+    .nazw2_5{
+      top: 410px;
     }
     .nazw2_6{
-        position: absolute;
-        top: 590px;
+      top: 460px;
     }
     .conteiner3{
-         width: 640px;
+        width: 960px;
         position: absolute;
         top: 1210px;
     }
 }
+
+
