--- a/adaptation/massa2.css
+++ b/adaptation/massa2.css
@@ -4,6 +4,7 @@
     max-width: 1300px;
     min-width: 400px;
     height: 700px;
+    margin:20px;
     background-color: darkgray;
     position: absolute;
     top: 0px;
@@ -82,6 +83,7 @@ height:300px;
     max-width: 1300px;
     min-width: 400px;
     height: 675px;
+    margin:20px;
     background:
 url("sport/massa_gl.jpg")left no-repeat;
     position: absolute;
