--- a/adaptation/massa_adaptation2.css
+++ b/adaptation/massa_adaptation2.css
@@ -44,6 +44,9 @@ url("sport/massa_gl_960.jpg")left no-repeat;
     .kn_oplata{
         left: 380px;
     }
+     .kn_gl{
+        left: 350px;
+    }
 }
 
 
