--- a/adaptation/suchka2.css
+++ b/adaptation/suchka2.css
@@ -77,6 +77,7 @@ height:300px;
 
 
 
+
 .conteiner2{
     display: flex;
     width: 1300px;
@@ -189,6 +190,20 @@ url("sport/massa_gl.jpg")left no-repeat;
     left: 530px;
 }
 .kn_oplata:hover{
+    color: crimson;
+    border-color: crimson;
+}
+.kn_gl{
+    font-size: 32px;
+    color: #fff;
+    border: solid 3px #fff;
+    border-radius: 10%;
+    padding: 4px;
+    position: absolute;
+    top: 600px;
+    left: 515px;
+}
+.kn_gl:hover{
     color: crimson;
     border-color: crimson;
 }
