--- a/adaptation/suchka_adaptation2.css
+++ b/adaptation/suchka_adaptation2.css
@@ -41,10 +41,11 @@ url("sport/massa_gl_960.jpg")left no-repeat;
         left: 350px;
     }
     .kn_oplata{
-        left: 380px;
+        left: 155px;
     }
      .kn_gl{
-        left: 350px;
+        left: 550px;
+         top: 500px;
     }
 }
 
